--- a/app/src/main/res/color/text_color_selector.xml
+++ b/app/src/main/res/color/text_color_selector.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_activated="true" android:color="@color/colorYellow" />
-    <item android:color="@color/colorAccent" />
+    <item android:color="@color/colorPrimary" />
 </selector>
