--- a/app/src/main/res/layout/open_street_map_layout.xml
+++ b/app/src/main/res/layout/open_street_map_layout.xml
@@ -39,6 +39,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
+        android:indeterminateTint="@android:color/holo_green_light"
         android:visibility="visible"
         tools:ignore="MissingConstraints" />
 
