--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -28,11 +28,8 @@
         android:gravity="left"
         android:layout_marginTop="4dp"
         android:background="@drawable/input"
-
         android:ems="10"
         android:fontFamily="@font/light"
-
-
         android:minHeight="48sp"
         android:textColor="#D9D9D9"
         android:textSize="18sp"
@@ -40,6 +37,70 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textResult" />
+
+    <TextView
+        android:id="@+id/textStatus"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="28dp"
+        android:fontFamily="@font/light"
+        android:text="@string/textStatus"
+        android:textColor="#9DA0A8"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/text_full_message"
+        app:layout_constraintTop_toBottomOf="@+id/text_full_message" />
+
+    <TextView
+        android:id="@+id/text_status"
+
+        android:layout_width="293sp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/input"
+        android:ems="10"
+        android:fontFamily="@font/light"
+        android:gravity="left"
+        android:minHeight="48sp"
+        android:textColor="#D9D9D9"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textStatus" />
+
+    <Button
+        android:id="@+id/btn_reset_status"
+        android:layout_width="293sp"
+        android:layout_height="45sp"
+
+        android:layout_marginTop="24dp"
+        android:background="@drawable/buttons"
+        android:fontFamily="@font/regular"
+        android:text="@string/textStatus"
+        android:textAlignment="center"
+        android:textColor="#D9D9D9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_status" />
+
+    <Button
+        android:id="@+id/btn_cancel_order"
+        android:layout_width="293sp"
+        android:layout_height="45sp"
+
+        android:layout_marginTop="8dp"
+        android:background="@drawable/buttons"
+        android:fontFamily="@font/regular"
+        android:text="@string/cancel_order"
+        android:textAlignment="center"
+        android:textColor="#D9D9D9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_reset_status" />
 
     <Button
         android:id="@+id/btn_again"
@@ -55,7 +116,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_full_message" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_cancel_order" />
 
     <Button
         android:id="@+id/btn_cancel"
